# ProgressTracker

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  compile.cmd  data.go  go.mod  main.go  main.py  pages.go  run.cmd
.github/workflows/: release.yml
pages/: OverviewPage.gohtml  StartPage.gohtml  header.gohtml
public/: style.css
src/: categories.rs  formatting.rs  main.rs  models.rs  sqlite_backend.rs  store.rs
